Path C — close audit Criticals (redactor JSON-escape bypass; reframe C1 boundary)
Critical #2 — PgToolCallJournal redactor missed secrets containing JSON-special
bytes (", \, control chars). The byte-level Redactor scanned the post-Jackson
output, where the escaped form no longer matched the raw secret bytes; secrets
landed verbatim in helios_tool_calls.args_json. Fixed two ways:

- SecretRegistry.register now refuses control chars (0x00-0x1F, 0x7F), " and \
  at registration with a message naming the JSON-escape rationale. All
  registered secrets are now provably safe for byte-level redaction in both
  pre- and post-serialise call sites.
- PgToolCallJournal.start walks record.args() and redacts each string leaf
  *before* JsonbMapper.objectToJsonb (mirrors the safe PgTraceStore pattern).
  The misleading "regardless of JSON context" comment is gone.

Critical #1 — C1 closed the stdout-RPC forgery path only. A JShell snippet
can still reach `realOut` via Class.forName + setAccessible(true) in any
launch regime where module accessibility is open (classpath launch, or JPMS
launch with --add-opens=ai.singlr.repl/ai.singlr.repl.sandbox inherited from
the parent — both of which JvmSandbox.shouldPropagateJvmArg forwards). The
reflection path is not closeable without breaking single-JVM isolation; the
load-bearing boundary is OS-level (Incus per-session sandbox). Two artifacts:

- JvmSandboxBootstrap#main javadoc rewritten to enumerate what C1 closes vs
  doesn't, the three launch regimes (clean JPMS / classpath / JPMS with
  inherited --add-opens), and the load-bearing OS boundary.
- warnIfReducedIsolation() fires a one-line WARNING on stderr at bootstrap
  startup when the module is unnamed or the package is open to unnamed
  modules. Catches accidental classpath launch and the Surefire-style
  --add-opens propagation case.

Exploit tests committed first to ground the fixes:

- JvmSandboxTest.reflectionForgesAnRpcCallToHost — exploit reproduces the
  reflection forgery 